--- a/Prog1_Game/Prog1_Game.vcxproj.filters
+++ b/Prog1_Game/Prog1_Game.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MyUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
